Fix two bugs that I just introduced with the overflow and about the unit of the detail row

--- a/devpanel/src/index.css
+++ b/devpanel/src/index.css
@@ -102,6 +102,7 @@ body {
   display:flex;
   border: 3px solid #ffffff;
   border-top: none;
+  height:230px;
 }
 .ConsoleMessages .ConsoleMessage-items .console-chart{
   width:500px;
